LOG4J2-3502 Add JMPS support to JTL. (#849)